2003-10-12  Marcus Brinkmann  <marcus@gnu.org>

	* config.m4: New file.
	* Makefile.am (physmem_LDFLAGS): Replace load address with
	@HURD_PHYSMEM_LOAD_ADDRESS@.

2003-09-24  Marcus Brinkmann  <marcus@gnu.org>

	* mmap.c: New file.
	* Makefile.am (physmem_SOURCES): Add mmap.c.
	* malloc-wrap.c (LACKS_SYS_MMAN_H, mmap, munmap, PROT_READ,
	PROT_WRITE, MAP_PRIVATE, MAP_ANONYMOUS, MUNMAP_FAILURE): Remove
	macros.

2003-09-22  Marcus Brinkmann  <marcus@gnu.org>

	* Makefile.am (AM_CPPFLAGS, physmem_CFLAGS): Removed.
	(physmem_CPPFLAGS): New variable.
	(physmem_SOURCES): Add malloc-wrap.c.
	(EXTRA_physmem_SOURCES): New variable.
	* malloc.c, malloc-wrap.c: New files.

2003-09-21  Marco Gerards  <metgerards@student.han.nl>

	* Makefile.am (AM_CPPFLAGS): New variable.

2003-09-19  Marcus Brinkmann  <marcus@gnu.org>

	* physmem.c: Include "zalloc.h".
	* zalloc.c: Include <string.h>, not <strings.h>.
	(add_block): Add missing return type.
	(zalloc_dump_zones): Use %p for pointer.

	* zalloc.c (L4_MIN_PAGE_SHIFT): Remove macro.
	(ZONE_SIZE): Use L4_MIN_PAGE_SIZE_LOG2 instead of L4_MIN_PAGE_SHIFT.
	(ZONES): Likewise.
	(zfree): Likewise.
	(zalloc): Likewise.

	* physmem/Makefile.am (physmem_SOURCES): Remove getpagesize.c.
	* getpagesize.c: File removed.
	* physmem/zalloc.c (zfree): Use l4_min_page_size() instead
	getpagesize().
	(zalloc): Likewise.
	(zalloc_dump_zones): Likewise.